<resources>
    <string name="app_name">Swoosh App</string>
    <string name="background_image_description">Background image</string>
    <string name="app_logo_description">App logo</string>
    <string name="desired_league_label">Desired League:</string>
    <string name="mens_label">Mens</string>
    <string name="womens_label">Womens</string>
    <string name="co_ed_label">Co-Ed</string>
    <string name="next_label">Next</string>
    <string name="go_all_in_label">GO ALL IN</string>
    <string name="on_going_all_out_label">ON GOING ALL OUT</string>
    <string name="find_a_team_label">Find a team in your city and dominate the league</string>
    <string name="get_started_label">Get Started</string>
    <string name="i_am_a_label">I am a:</string>
    <string name="begginer_label">Begginer</string>
    <string name="baller_label">Baller</string>
    <string name="finish_label">Finish</string>
</resources>
