<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image_description"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:id="@+id/imageView2" android:scaleType="fitCenter" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/imageView4"
            android:contentDescription="@string/app_logo_description"/>
    <TextView
            android:text="@string/i_am_a_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white" android:textSize="18sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/begginer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textOff="@string/begginer_label" android:textOn="@string/begginer_label"
                android:layout_marginEnd="8dp"/>
        <ToggleButton
                android:text="@string/baller_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textOff="@string/baller_label" android:textOn="@string/baller_label"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish_label"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:background="@drawable/swoosh_button"
            android:textColor="@android:color/white" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>